tests/NormalTests/paczka1/fuzzy1/18305984.err
Error in line 2: Wp1FU8z00BK S353 16,7
Error in line 7: Wp1FU8z00BK A502 14,1
Error in line 8: n7WFxZrHVC1 S588 75,6
Error in line 10: Wp1FU8z00BK A46 51,7
Error in line 11: n7WFxZrHVC1 A502 39,4
Error in line 24: A46 A502 87,6
Error in line 15: Boa A46 124,2
